<resources>
    <string name="app_name">Game by Shadow Amitendu</string>
    <string name="App_Title">Tic Tac Toe</string>
    <string name="start_btn">Start</string>
    <string name="hint_enter_name">Enter the Name</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="start_the_game_btn">Start the Game</string>
    <string name="homeBtn">Home</string>
    <string name="play_againBtn">Play Again</string>
    <string name="a_game_that_never_get_s_old">A game that never get\'s Old...</string>
    <string name="player_turn">%1$s\'s Turn</string>
    <string name="player_won">%1$s WON THE MATCH!!!</string>
    <string name="tie">Tie!!</string>
</resources>