<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player_names"
    android:background="@color/bg_brown">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilita_one"
        android:text="@string/App_Title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="48sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <EditText
        android:id="@+id/player1EditTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:textColorHint="@color/black"
        android:fontFamily="@font/lilita_one"
        android:hint="@string/hint_enter_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <EditText
        android:id="@+id/player2EditTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:textColorHint="@color/black"
        android:fontFamily="@font/lilita_one"
        android:hint="@string/hint_enter_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53999996" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilita_one"
        android:text="@string/player_1"
        android:textAlignment="center"
        android:textColor="#4527a0"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/player1EditTxt"
        app:layout_constraintStart_toStartOf="@+id/player1EditTxt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilita_one"
        android:text="@string/player_2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#EF5350"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/player2EditTxt"
        app:layout_constraintStart_toStartOf="@+id/player2EditTxt" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_btn"
        android:fontFamily="@font/lilita_one"
        android:onClick="startGameBtn"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/start_the_game_btn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2EditTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>